WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
193879
Have composited RenderIFrame layers make FrameHosting scrolling tree nodes to parent the iframe's scrolling node
https://bugs.webkit.org/show_bug.cgi?id=193879
Summary
Have composited RenderIFrame layers make FrameHosting scrolling tree nodes to...
Simon Fraser (smfr)
Reported
2019-01-26 20:33:38 PST
Have composited RenderIFrame layers make FrameHosting scrolling tree nodes to parent the iframe's scrolling node
Attachments
Patch
(70.69 KB, patch)
2019-01-26 21:08 PST
,
Simon Fraser (smfr)
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-01-26 21:08:38 PST
Created
attachment 360265
[details]
Patch
Radar WebKit Bug Importer
Comment 2
2019-01-26 21:11:35 PST
<
rdar://problem/47578495
>
Simon Fraser (smfr)
Comment 3
2019-01-27 08:59:53 PST
https://trac.webkit.org/changeset/240553/webkit
I fixed the crash too!
Ryan Haddad
Comment 4
2019-01-28 21:47:16 PST
This change caused compositing/iframes/remove-reinsert-webview-with-iframe.html to consistently crash on iOS Simulator bots, significantly slowing down EWS:
https://build.webkit.org/results/Apple%20iOS%2012%20Simulator%20Release%20WK2%20(Tests)/r240636%20(2254)/compositing/iframes/remove-reinsert-webview-with-iframe-crash-log.txt
Frédéric Wang Nélar
Comment 5
2019-01-29 00:30:31 PST
(In reply to Ryan Haddad from
comment #4
)
> This change caused > compositing/iframes/remove-reinsert-webview-with-iframe.html to consistently > crash on iOS Simulator bots, significantly slowing down EWS: >
https://build.webkit.org/results/
> Apple%20iOS%2012%20Simulator%20Release%20WK2%20(Tests)/r240636%20(2254)/ > compositing/iframes/remove-reinsert-webview-with-iframe-crash-log.txt
Trace looks similar to
bug 193907
.
Simon Fraser (smfr)
Comment 6
2019-01-29 13:33:52 PST
Crashes should be fixed by
https://trac.webkit.org/changeset/240677/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug